client/src/pages/Home/home.css
.landing-page .logo,  {
	padding: 20px 40px;
	font-size: 10px;
	height: 100px;
	margin: 0 auto;
	text-align: center;
	display: block;
	letter-spacing: 1px;
	padding-top: 10px;
	margin-bottom: 40px;
	width: 50px;
}

.landing-page {
	width: 100%;
	background-size: cover;
	position: fixed;
	height: 100%;
	top: 0;
	background-color: #fff7e7;
	color: #2c3d50;
}

#CTAconfirmation {
	text-align: center;
	padding-top: 2px;
}

.logo {
	margin-top: 10%;
	width: 90%;
	padding: 0 20px;
}

.button {
	color: #000000;
	border-radius: 10px;
	cursor: pointer;
	height: 46px;
	letter-spacing: 1px;
	padding: 10px 23px;
	text-transform: uppercase;
		font-family: 'Raleway', sans-serif;
	background: rgb(255, 165, 146) none repeat scroll 0% 0% / auto padding-box border-box;
	border: 2px solid rgb(255, 165, 146);
	font: normal normal 600 normal 16px / 20px proxima-nova, 'Helvetica Neue', Helvetica, Arial, sans-serif;
	-webkit-appearance: none;
  }

